--- a/Data_Structure_project2/Data_Structure_project2.vcxproj
+++ b/Data_Structure_project2/Data_Structure_project2.vcxproj
@@ -115,6 +115,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Airport.cpp" />
+    <ClCompile Include="Plane.cpp" />
+    <ClCompile Include="Runway.cpp" />
+    <ClCompile Include="source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Airport.h" />
+    <ClInclude Include="Plane.h" />
+    <ClInclude Include="Runway.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
